--- a/ROS_Workspace/src/DUO-Camera-ROS/CMakeLists.txt
+++ b/ROS_Workspace/src/DUO-Camera-ROS/CMakeLists.txt
@@ -52,11 +52,10 @@ elseif(APPLE)
   link_directories(${DUO_SDK}/osx/x64/)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
 elseif(UNIX)
-  if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(DUOLib_ARCH x64)
-message(STREQAL WORKED)
- elseif( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv7l")
+ if( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv7l")
     set(DUOLib_ARCH armv7l)
+  elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    set(DUOLib_ARCH x64)
   else()
     set(DUOLib_ARCH x86)
   endif()
