--- a/ROS_Workspace/src/DUO-Camera-ROS/cfg/Duo.cfg
+++ b/ROS_Workspace/src/DUO-Camera-ROS/cfg/Duo.cfg
@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+#!/usr/bin/env python2
 PACKAGE = "duo3d_ros"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
