--- a/package.xml
+++ b/package.xml
@@ -35,6 +35,9 @@
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>message_runtime</run_depend>
 
+  <build_depend>vio_ros</build_depend>
+  <run_depend>vio_ros</run_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
