updated to duo driver version 1.0.50.26 with multiple IMU messages per image (fixed 100 Hz IMU samples) Write IMU data into an array in the VioSensorMsg changed to 50 hz image framerate
added auto exposure script and launch file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ if(WIN32)
         target_link_libraries(duo_node DUOlib)
 #        target_link_libraries(dense3d DUOlib)
 elseif(UNIX OR APPLE)
-	target_link_libraries(duo_node duo)
+	target_link_libraries(duo_node DUO)
 #        target_link_libraries(dense3d duo)
 endif()
 
