--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ elseif(APPLE)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
 elseif(UNIX)
  if( ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv7l")
-    set(DUOLib_ARCH armv7l)
+    set(DUOLib_ARCH arm)
   elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
     set(DUOLib_ARCH x64)
   else()
