--- a/package.xml
+++ b/package.xml
@@ -37,6 +37,8 @@
 
   <build_depend>vio_ros</build_depend>
   <run_depend>vio_ros</run_depend>
+  <build_depend>ait_ros_messages</build_depend>
+  <run_depend>ait_ros_messages</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
